@@ -1,3 +1,11 @@
+2014-08-22  David Gilbert  <david.gilbert@object-refinery.com>
+
+    Change suggested by Ulrich Voigt:
+    * org/jfree/data/time/FixedMillisecond.java
+    (FixedMillisecond()): Avoid Date creation,
+    (FixedMillisecond(long)): Likewise,
+    (FixedMillisecond(Date)): Redirect to other constructor.
+
 2014-08-04  David Gilbert  <david.gilbert@object-refinery.com>
 
     Patch #312 by Ulrich Voigt:
